fixed media querry overflow x hidden

--- a/style.css
+++ b/style.css
@@ -164,8 +164,11 @@ img {
   }
   body {
     margin: 2px;
+    overflow-x: hidden;
   }
   .card {
+    padding: 1.5em;
+    padding-bottom: 1em;
     margin: 0;
   }
   .iconBeschreibung.flex {
